// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Catalog markdown page template literal 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      "
# This is a title

A paragraph

",
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "# THIS IS A HINT

Cool, eh?",
        },
        "type": [Function],
      },
      "
",
    ],
  },
  "type": [Function],
}
`;

exports[`Catalog markdown page template literal with arbitrary values 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": [
      "
# This is a title

A paragraph 123

~~~
",
      "foo",
      "bar",
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "hello",
        "props": {
          "children": "hello",
        },
        "type": "div",
      },
      "
~~~
",
    ],
  },
  "type": [Function],
}
`;
